syntax = "proto3";

package main;

option go_package = "../itemstore";

enum StorageCenter {
    K = 0;
    FRA = 1;
    HH = 2;
}

service ItemStoreService {
    rpc CheckStorageAvailability(ItemStoreAvailabilityRequest) returns (ItemStoreAvailabilityResponse);
    rpc DeliverItemToStorage(ItemStoreRequest) returns (ItemStoreResponse);
    rpc ListStorageLayoutOfCenter(StorageCenterLayoutRequest) returns (stream ItemStoreAvailabilityResponse);
}

message ItemStoreRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
    StorageCenter storage_center = 4;
    int32 storage_layer = 5;
    int32 storage_block = 6;
}

message ItemStoreResponse {
    int32 id = 1;
}

message ItemStoreAvailabilityRequest {
    StorageCenter storage_center = 1;
    int32 storage_layer = 2;
    int32 storage_block = 3;
}

message ItemStoreAvailabilityResponse {
    int32 availability = 1;
    int32 storage_layer = 2;
    int32 storage_block = 3;
}

message StorageCenterLayoutRequest {
    StorageCenter storage_center = 1;
}